@@ -4,6 +4,7 @@ from .loader import Loader
 from .postgres_connector import PostgresConnector
 from .postgres_queries_meteo import PostgresQueriesMeteo
 from .postgres_queries_station import PostgresQueriesStation
+from .postgres_queries_job import PostgresQueriesJob
 
 __all__ = ['MeteoPostgresLoader',
            "Connector",
@@ -11,5 +12,6 @@ __all__ = ['MeteoPostgresLoader',
            "PostgresQueriesMeteo",
            "PostgresConnector",
            "PostgresQueriesStation",
-           "Loader"
+           "Loader",
+           "PostgresQueriesJob"
            ]
