@@ -1,4 +1,5 @@
 from .meteo import Meteo
 from .station import Station
+from .job import Job
 
-__all__ = ['Meteo', 'Station']
+__all__ = ['Meteo', 'Station', 'Job']
