@@ -10,3 +10,4 @@ TEMPLATE template0;
 
 CREATE SCHEMA IF NOT EXISTS raw ;
 CREATE SCHEMA IF NOT EXISTS marts;
+CREATE SCHEMA IF NOT EXISTS core;
